# replit-with-rust

./: .gitignore
backend/: .env  .env.example  Cargo.toml
backend/init_service/: Cargo.toml
backend/init_service/src/: main.rs
backend/init_service/src/services/: hello.rs  mod.rs  project_service.rs
backend/runner/: Cargo.toml
backend/runner/src/: fs.rs  main.rs  ws.rs
backend/src/: main.rs
backend/src/services/: hello.rs  project_service.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  setupProxy.js
frontend/src/components/: CodingPage.tsx  Editor.tsx  Landing.tsx  Terminal.tsx
frontend/src/components/editor/: Code.tsx
frontend/src/components/editor/components/: FileTree.tsx  SideBar.tsx
frontend/src/components/editor/utils/: FileManager.tsx
