[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-s3 = { version = "1.16.0", features = ["behavior-version-latest"] }
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
once_cell = "1.19.0"
actix-cors = "0.7.0"
axum = "0.7.4"
tower-http = { version = "0.5.2", features = ["cors"] }
log = "0.4.20"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
