[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
socketioxide = { version = "0.10.2", features = ["state"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = "0.7.4"
tower-http = { version = "0.5.2", features = ["cors"] }
tower = "0.4.13"
chrono = { version = "0.4.34",features = ["serde"] }
